--- a/restaurant/scss/styles.css
+++ b/restaurant/scss/styles.css
@@ -374,7 +374,8 @@ nav ul li.active a {
 /*----------- MAIN --------------*/
 main {
   padding: 0 2%;
-  min-height: 10rem; }
+  min-height: 10rem;
+  padding-bottom: 4%; }
 
 picture.photoA {
   display: block;
@@ -388,7 +389,8 @@ picture.photoB {
   display: block;
   float: right;
   width: 46%;
-  margin: 0 2%; }
+  margin: 0 2%;
+  clear: both; }
 
 /*----------- FOOTER --------------*/
 footer {
